# eco2d

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_dbg.bat  cmake_setup.bat  deploy_web.sh  dos2unix_conv.sh  eco2d.10x  eco2d.sublime-project  foundation.md  host_web.sh  project.4coder  run_client.bat  run_client_remote.bat  run_release.bat  run_server.bat  run_web.sh  setup_web.sh
code/apps/client/: CMakeLists.txt  main.c
code/apps/client/header/: camera.h  entity_view.h  game.h  network.h  platform.h  prediction.h  renderer.h  signal_handling.h  world_view.h
code/apps/client/source/: camera.c  entity_view.c  game.c  main.c  network.c  platform_raylib.c  platform_text.c  prediction.c  renderer.c  renderer_raylib.c  renderer_text.c  world_view.c
code/apps/client/source/utils/: options.c
code/apps/server/: CMakeLists.txt
code/apps/server/header/: blocks.h  blocks_info.h  components.h  network.h  options.h  platform.h  world.h  world_gen.h
code/apps/server/header/components/: controllers.h  general.h  net.h  physics.h
code/apps/server/header/utils/: options.h
code/apps/server/header/world/: world.h
code/apps/server/modules/: CMakeLists.txt
code/apps/server/modules/modules/: net.h  (+2 more)
code/apps/server/source/: blocks.c  blocks_list.c  game.c  main.c  network.c  options.c  perlin.c  world.c  world_gen.c
code/foundation/: CMakeLists.txt
code/foundation/src/: assets_ids.h
code/foundation/src/core/: camera.c  camera.h  game.c  game.h  rules.h  rules_default.c
code/foundation/src/debug/: debug_draw.c  debug_draw.h  debug_replay.c  debug_replay.h  debug_ui.c  debug_ui_actions.c  debug_ui_widgets.c
code/foundation/src/dev/: debug_draw.c  debug_replay.c  debug_ui.c  debug_ui.h  debug_ui_actions.c  debug_ui_tools.c  debug_ui_widgets.c
code/foundation/src/ecs/: components.c  components.h  systems.c  systems.h
code/foundation/src/ents/: device.c  device.h  entity.c  entity.h  entity_spawnlist.c  furnace.c  furnace.h  items.c  items.h  items_list.c  items_list_helpers.h  player.c  storage.c  vehicle.c
code/foundation/src/gui/: build_mode.c  inventory.c  notifications.c  notifications.h  spritesheet_viewer.c  tooltip.c  ui_skin.c
code/foundation/src/lists/: assets_ids.h  assets_ids.lst  assets_list.c  blocks_list.c  crafting_list.c  entity_spawnlist.c  items_list.c  items_list_helpers.h
code/foundation/src/models/: asset_setup.h  assets.c  assets.h  components.c  components.h  crafting.c  crafting.h  database.c  database.h  device.c  device.h  entity.c  entity.h  entity_spawnlist.c  item_placement.h  items.c  items.h  items_list.c  items_list_helpers.h
code/foundation/src/net/: network.h  network_enet.c
code/foundation/src/packets/: pkt_00_init.c  pkt_00_init.h  pkt_01_welcome.c  pkt_01_welcome.h  pkt_send_code.c  pkt_send_code.h  pkt_send_keystate.c  pkt_send_keystate.h  pkt_send_librg_update.c  pkt_send_librg_update.h  pkt_send_notif.c  pkt_send_notif.h  pkt_switch_viewer.c  pkt_switch_viewer.h
code/foundation/src/pkt/: packet.c  packet.h  packet_utils.h
code/foundation/src/platform/: arch.h  input.c  input.h  platform.h  profiler.c  profiler.h  renderer.h  signal_handling.c  system.h
code/foundation/src/renderers/: renderer_3d.c  renderer_bridge.c  renderer_v0.c
code/foundation/src/systems/: systems.c  systems.h
code/foundation/src/utils/: compress.c  options.c  options.h  raylib_helpers.h
code/foundation/src/world/: blocks.c  blocks.h  blocks_list.c  entity_view.c  entity_view.h  perlin.c  perlin.h  prediction.c  prediction.h  world.c  world.h  world_view.c  world_view.h  worldgen.h  worldgen_utils.h
code/game/: CMakeLists.txt
code/game/header/: assets.h  camera.h  entity.h  entity_view.h  game.h  packet_utils.h  platform.h  prediction.h  profiler.h  system.h  world_view.h
code/game/header/editors/: texed.h
code/game/header/packets/: pkt_send_librg_update.h
code/game/header/utils/: raylib_helpers.h
code/game/header/world/: blocks.h  blocks_info.h  perlin.h  world.h
code/game/source/: assets.c  assets_list.c  debug_ui.c  debug_ui_actions.c  debug_ui_widgets.c  entity.c  entity_view.c  game.c  main.c  packet.c  platform_raylib.c  player.c  profiler.c  signal_handling.c  world_view.c
code/game/source/editors/: texed.c  texed_ops.c  texed_ops_list.c  texed_prj.c  texed_widgets.c
code/game/source/packets/: pkt_00_init.c  pkt_01_welcome.c  pkt_send_keystate.c
code/game/source/utils/: options.c
code/game/source/world/: blocks.c  blocks_list.c  world.c
code/game/src/: asset_setup.h  assets.c  assets.h  assets_list.c  camera.c  debug_draw.c  debug_draw.h  debug_replay.c  debug_replay.h  debug_replay_compat_v2.c  debug_ui.c  debug_ui.h  debug_ui_actions.c  debug_ui_helpers.c  debug_ui_widgets.c  device.c  device.h  entity.c  entity.h  entity_spawnlist.c  entity_view.c  entity_view.h  game.c  game.h  item_placement.h  items.c  items.h  items_list.c  main.c  network.c  network.h  packet.c  packet.h  packet_utils.h  platform.h  platform_raylib.c  platform_text.c  player.c  player.h  prediction.c  (+14 more)
code/game/src/gui/: build_mode.c  inventory.c
code/game/src/packets/: pkt_00_init.c  pkt_00_init.h  pkt_01_welcome.c  pkt_01_welcome.h  pkt_send_keystate.c  pkt_send_keystate.h  pkt_send_librg_update.c  pkt_switch_viewer.c  pkt_switch_viewer.h
code/game/src/utils/: options.c  raylib_helpers.h
code/game/src/world/: blocks.c  blocks.h  blocks_info.h  blocks_list.c  world.c  world.h
code/games/minimal/: CMakeLists.txt
code/games/minimal/src/: game.c  main.c  platform.c  renderer.c  texgen.c  worldgen.c
code/games/minimal_3d/: CMakeLists.txt
code/games/minimal_3d/src/: platform.c  renderer.c  rules.c  texgen.c  worldgen.c
code/games/sandbox/: CMakeLists.txt
code/games/sandbox/src/: game.c  main.c  platform.c  renderer.c  texgen.c  worldgen.c
code/games/survival/: CMakeLists.txt
code/games/survival/src/: game.c  game.h  main.c  platform.c  renderer.c  spritesheet.c  system_mob.c  system_weapon.c  texgen.c  worldgen.c
code/vendors/ferox/: CMakeLists.txt
code/vendors/ferox/include/: ferox.h
(+232 files in other folders)
